# perception

./: .gitignore  README.md  perception.rviz
color_object_detection/: CMakeLists.txt  package.xml
color_object_detection/msg/: Rectangle.msg
color_object_detection/src/: object_detection.py
cuboid_detection/: CMakeLists.txt  package.xml
cuboid_detection/launch/: bbox_filter.launch  ground_plane_segmentation.launch  iterative_closest_point.launch  play_rosbag.launch  surface_normal_estimation.launch  three_dimension_to_two_dimension.launch
cuboid_detection/scripts/: object_detection.py  test_object_detection.py
cuboid_detection/src/: bbox_filter.cpp  ground_plane_segmentation.cpp  iterative_closest_point.cpp  surface_normal_estimation.cpp  three_dimension_to_two_dimension.cpp
cuboid_detection/templates/: make_cuboid.py  template_cuboid_L200_W100_H30_3faces.pcd  template_cuboid_L200_W100_H75.pcd  template_cuboid_L200_W100_H75_3faces.pcd  template_cuboid_L200_W75_H100_3faces.pcd
handpose_ros/: CMakeLists.txt  package.xml
handpose_ros/scripts/: handpose_ros.py
human_pose_detection/: CMakeLists.txt  package.xml
object_detection/: CMakeLists.txt  package.xml  perception.rviz
object_detection/launch/: ground_plane_segmentation.launch  iterative_closest_point.launch  object_detection.launch  play_rosbag.launch
object_detection/scripts/: draw_bbox.py  ply_viewer.py
object_detection/src/: ground_plane_segmentation.cpp  iterative_closest_point.cpp  object_pose_detection.cpp
object_detection/srv/: ObjectDetection.srv
object_detection/templates/: clamp_ascii.pcd  clamp_ascii_tf.pcd  eraser_ascii.pcd  eraser_ascii_tf.pcd  marker_ascii.pcd  marker_ascii_tf.pcd  screwdriver_ascii.pcd  screwdriver_ascii_tf.pcd  transforms.txt
open_face/: CMakeLists.txt  README.md
open_face/msg/: Face.msg
open_face/src/: openface2_ros.cpp  openface2_ros_single.cpp
openface2_ros/: CMakeLists.txt  package.xml
openface2_ros/launch/: openface2_ros.launch
openface2_ros/msg/: Faces.msg
openface2_ros/src/: openface2_ros.cpp  openface2_ros_single.cpp
